test/good/generics/name04.px

func id<T>(T x) T def
    return x

func f<T>() T def
    return id([id('?')])

func g<T>(T x) T def
    s = f()
    T y = id(x)
    return s.length + y

print g(5)
