test/bad/generics/call03.px

func f(Int x) Int def
    return x

func g<Num T>(T x) def
    print f(x)
